[package]
name = "html-to-react"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "convert a html string to react"
readme = "README.md"
keywords = ["html", "react", "html-converter", "react-converter"]
categories = ["encoding", "parser-implementations", "web-programming"]
documentation = "https://docs.rs/html-to-react"
include = ["src/*", "LICENSE", "README.md"]

[dependencies]
convert_case = "0.5.0"
lazy_static = "1.4.0"
