[package]
name = "htr"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "convert a html string to react"
readme = "README.md"
keywords = ["html", "react", "html-converter", "react-converter"]
categories = ["encoding", "parser-implementations", "web-programming"]
documentation = "https://docs.rs/htr"
include = ["src/*", "LICENSE", "README.md"]
authors = ["j-mendez <jeff@a11ywatch.com>"]

[dependencies]
convert_case = "0.5.0"
lazy_static = "1.4.0"
