[package]
name = "htr"
version = "0.5.27"
edition = "2021"
license = "MIT"
description = "convert html to react fast"
readme = "../README.md"
keywords = ["html", "react", "html-converter", "react-converter"]
categories = ["parser-implementations", "web-programming"]
documentation = "https://docs.rs/htr"
include = ["src/*", "LICENSE", "README.md"]
authors = ["j-mendez <jeff@a11ywatch.com>"]
repository = "https://github.com/a11ywatch/htr"

[dependencies]
convert_case = "0.5.0"
lazy_static = "1.4.0"
