[package]
name = "htr_cli"
version = "0.5.27"
authors = ["j-mendez <jeff@a11ywatch.com>"]
description = "convert html to react fast"
repository = "https://github.com/a11ywatch/htr"
readme = "README.md"
keywords = ["html", "react", "html-converter", "react-converter"]
categories = ["parser-implementations","web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/htr"
include = ["src/*", "LICENSE", "README.md"]
edition = "2021"

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }

[dependencies.htr]
version = "0.5.26"
path = "../htr"
default-features = false

[[bin]]
name = "htr"
path = "src/main.rs"
doc = false
